--- a/views/signup.pug
+++ b/views/signup.pug
@@ -1,5 +1,6 @@
 doctype html
 head
+  // Required meta tags
   meta(charset='utf-8')
   meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
   // Bootstrap CSS
@@ -9,7 +10,14 @@ head
   meta(name='viewport' content='width=device-width, initial-scale=1, user-scalable=no')
   link(rel='stylesheet' href='main.css')
   style.
-    * {background-image: "./images/background.jpg"}
+    .form-signin {
+    width: 40%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #ffffff;
+    }
 header#header
   .inner
     a.logo(href='index.html') ReginaSkate
@@ -21,45 +29,17 @@ header#header
       a(href='login.html') Log In
 a.navPanelToggle(href='#menu')
   span.fa.fa-bars
-section#banner
+.container-fluid
+  form.form-signin
+    h1 Create an account
+    label.sr-only(for='inputEmail') Email address
+    input#inputEmail.form-control(type='email' placeholder='Email address' required='' autofocus='')
+    label.sr-only(for='inputPassword') Password
+    input#inputPassword.form-control(type='password' placeholder='Password' required='')
+    button.button.alt(type='submit') Sign Up
+section#footer(style='width:100%')
   .inner
-    h1 Welcome to Regina Skate
-    ul.actions
-      li
-        a.button.alt(href='view.html') Get Started
-section#one
-  .inner
-    header
-      h2 View the Map
-    p
-      | See the locations of all skate spots users have shared in Regina. Find the spot closest to you.
-    ul.actions
-      li
-        a.button.alt(href='#') Learn More
-section#two
-  .inner
-    article
-      .content
-        header
-          h3 Add a Spot
-        .image.fit
-          img(src='images/pic01.jpg' alt='')
-        p Share your favouite place to skate in Regina with others.
-        ul.actions
-          li
-            a.button.alt(href='#') Learn More
-    article.alt
-      .content
-        header
-          h3 View Spots
-        .image.fit
-          img(src='images/pic02.jpg' alt='')
-        p View skate spots shared by other users.
-        ul.actions
-          li
-            a.button.alt(href='#') Learn More
-section#footer
-  .inner
+  footer.footer
 // Optional JavaScript
 // jQuery first, then Popper.js, then Bootstrap JS
 script(src='https://code.jquery.com/jquery-3.4.1.slim.min.js' integrity='sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n' crossorigin='anonymous')
