--- a/views/view.pug
+++ b/views/view.pug
@@ -9,7 +9,6 @@ head
   meta(name='viewport' content='width=device-width, initial-scale=1, user-scalable=no')
   link(rel='stylesheet' href='main.css')
   style.
-    * {background-image: "./images/background.jpg"}
 header#header
   .inner
     a.logo(href='index.html') ReginaSkate
@@ -26,7 +25,7 @@ section#banner
     h1 Welcome to Regina Skate
     ul.actions
       li
-        a.button.alt(href='view.html') Get Started
+        a.button.alt(href='#') Get Started
 section#one
   .inner
     header
