--- a/views/index.pug
+++ b/views/index.pug
@@ -10,6 +10,7 @@ head
   link(rel='stylesheet' href='main.css')
   style.
     * {background-image: "./images/background.jpg"}
+body
 header#header
   .inner
     a.logo(href='index.html') ReginaSkate
