--- a/views/index.pug
+++ b/views/index.pug
@@ -17,7 +17,7 @@ header#header
     link(href='https://fonts.googleapis.com/css?family=Barlow+Condensed&display=swap' rel='stylesheet')
     nav#nav
       a(href='map.page.html') Map
-      a(href='submit.html') Submit
+      a(href='post.html') post
       a(href='view.html') View Spots
       a(href='login.html') Log In
 a.navPanelToggle(href='#menu')
