--- a/views/login.pug
+++ b/views/login.pug
@@ -24,7 +24,7 @@ header#header
     link(href='https://fonts.googleapis.com/css?family=Barlow+Condensed&display=swap' rel='stylesheet')
     nav#nav
       a(href='map.page.html') Map
-      a(href='submit.html') Submit
+      a(href='post.html') post
       a(href='view.html') View Spots
       a(href='login.html') Log In
 a.navPanelToggle(href='#menu')
@@ -39,7 +39,7 @@ a.navPanelToggle(href='#menu')
     button.button.alt(type='submit') Sign in
     p
       | Don&apos;t have an account? 
-      a(href='signup.html')  Create one now.
+      a(href='register.html')  Create one now.
 section#footer(style='width:100%')
   .inner
   footer.footer
