--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,9 +13,10 @@ html
     //- block scripts
     
   body 
+  #a
     header#header
       .inner
-        a.logo(href='index.html') ReginaSkate
+        a.logo(href='#a') ReginaSkate
         link(href='https://fonts.googleapis.com/css?family=Barlow+Condensed&display=swap' rel='stylesheet')
         nav#nav
           a(href='#a1') Map
