--- a/views/index.pug
+++ b/views/index.pug
@@ -49,7 +49,7 @@ block content
                   div.post-container
                     a(href="/posts/" + post._id)
                       h4=post.name
-                    img(src="~/" + post.image)
+                    img(post.image)
                     p Description:
                     h4=post.description
                     p Location:
