--- a/views/index.pug
+++ b/views/index.pug
@@ -44,16 +44,13 @@ block content
                 p View skate spots shared by other users.
                 each post in posts
                   div.post-container
-                    //- a(href="/posts/" + post._id)
-                    //-   img(src="/img/spots/" + post.image)
-                    //-   h4=post.name
-                    //- p Description:
-                    //- h4=post.description
-                    //- p Location:
-                    //- h4=post.location
                     a(href="/posts/" + post._id)
+                      h4=post.name
                       img(src="/img/spots/" + post.image)
-                      h3=post.name
+                    p Description:
+                    h4=post.description
+                    p Location:
+                    h4=post.location
     #a4
     section#footer
       br
