desc + loc added 2

--- a/views/create.pug
+++ b/views/create.pug
@@ -7,7 +7,7 @@ div.create-container
     input#image.custom-file-input(type='file' name='image')
     br
     label(for='description') description
-    input(type='text', placeholder='Description', required='required', name='desciption')
+    input(type='text', placeholder='Description', required='required', name='description')
     br
     label(for='location') location of your spot
     input(type='text', placeholder='Address or Coordinates', required='required', name='location')
