--- a/views/index.pug
+++ b/views/index.pug
@@ -46,7 +46,7 @@ block content
                   div.post-container
                     a(href="/posts/" + post._id)
                       h4=post.name
-                      img(src="/img/spots/" + post.image)
+                      img(src="/img/posts/" + post.image)
                     p Description:
                       h4=post.description
                     p Location:
