--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ block content
         ul.actions
           li
             a.button.alt(href='#a3') Get Started
-    
+    #a1
     section#one
       .inner
         header
@@ -46,11 +46,11 @@ block content
                   div.post-container
                     a(href="/posts/" + post._id)
                       h4=post.name
-                      img(src="/img/posts/" + post.image)
+                    img(src='reginaskateplaza7.jpg' alt='Regina Skate Plaza' width='400' height='233')
                     p Description:
-                      h4=post.description
+                    h4=post.description
                     p Location:
-                      h4=post.location
+                    h4=post.location
     #a4
     section#footer
       br
